# xfce4-powertimer-plugin

./: .gitignore  AUTHORS  Makefile.am  NEWS  README.md  configure.ac.in  powertimer.desktop  powertimer.desktop.in
.github/workflows/: c-cpp.yml
icons/: Makefile.am
icons/32x32/: Makefile.am
icons/scalable/: Makefile.am
include/: configure-dialog.h  constants.h  power-timer.h  time-spin-utils.h
include/power-timer/: about-dialog.h  constants.h
po/: POTFILES.in  uk.po
src/: Makefile.am  about-dialog.c  configure-dialog.c  plugin.c  power-timer.c  time-spin-utils.c
